deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: my-service
    template:
        metadata:
            labels:
                app: my-service
        spec:
            containers:
                - name: service
                  image: nginx:1.13.11
