my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: my-pod
spec:
    containers:
        - name: app
          image: alpine
          command: ["sleep", "3000"]
