pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: service
    image: nginx
    ports:
      - containerPort: 8080
