statefulset.yaml
apiVersion: app/v2
kind: StatefulSet
metadata:
    name: my-database
spec:
    replicas: 3
    selector:
        matchLabels:
            app: my-database
    service: my-db-service
    template:
        metadata:
            metadata:
                labels:
                    app: my-database
            spec:
                containers:
                    - name: db
                      image: mongo:3.7.9
                      ports:
                          # ommitted for brevity, see code examples
                      volumeMounts:
                          - name: data
                            mountPath: /data
             volumeClaimTemplates:
                 - metadata:
                     name: data
                   spec:
                       accessModes: [ReadWriteOnce]
                       storageClassName: ssd-fast
                       resources:
                           requests:
                               storage: 10Gi
