service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-service
spec:
    type: ClusterIP
    selector:
        app: my-service
    ports:
        - protocol: TCP
          port: 80
          targetPort: 88
