ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: my-ingress
spec:
    rules:
        - host: your-app.example
          http:
              paths:
                  - path: /shop
                    backend:
                        serviceName: my-service
                        servicePort: 80
                  - path: /home
                    backend:
                        serviceName: my-other-service
                        servicePort: 80
